finalizando api
